// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render with 1 breadcrumb item and last is active 1`] = `
<DocumentFragment>
  <section
    class="pf-v5-l-page-header pf-v5-c-page-header pf-v5-l-page__main-section pf-v5-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-7"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-v5-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-2"
      data-ouia-component-type="PF5/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-v5-c-breadcrumb__list"
        role="list"
      >
        <li
          class="pf-v5-c-breadcrumb__item"
        >
          <a
            data-ouia-component-id="breadcrumb-to-First item"
            data-ouia-component-type="undefined-breadcrumb"
            href="/"
          >
            First item
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="pf-v5-l-split pf-m-gutter"
    >
      <div
        class="pf-v5-l-split__item"
      >
        <div
          class="pf-v5-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v5-u-flex-grow-1"
          >
            <h1
              class="pf-v5-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-8"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            />
          </div>
        </div>
      </div>
      <div
        class="pf-v5-l-split__item pf-m-fill"
      />
      <div
        class="pf-v5-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Header component should render with 2 breadcrumb items and last is active 1`] = `
<DocumentFragment>
  <section
    class="pf-v5-l-page-header pf-v5-c-page-header pf-v5-l-page__main-section pf-v5-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-11"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-v5-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-4"
      data-ouia-component-type="PF5/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-v5-c-breadcrumb__list"
        role="list"
      >
        <li
          class="pf-v5-c-breadcrumb__item"
        >
          <a
            data-ouia-component-id="breadcrumb-to-First item"
            data-ouia-component-type="undefined-breadcrumb"
            href="/"
          >
            First item
          </a>
        </li>
        <li
          class="pf-v5-c-breadcrumb__item"
        >
          <span
            class="pf-v5-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          <a
            data-ouia-component-id="breadcrumb-to-Second item"
            data-ouia-component-type="undefined-breadcrumb"
            href="/"
          >
            Second item
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="pf-v5-l-split pf-m-gutter"
    >
      <div
        class="pf-v5-l-split__item"
      >
        <div
          class="pf-v5-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v5-u-flex-grow-1"
          >
            <h1
              class="pf-v5-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-12"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            />
          </div>
        </div>
      </div>
      <div
        class="pf-v5-l-split__item pf-m-fill"
      />
      <div
        class="pf-v5-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Header component should render with 3 breadcrumb items and last is active 1`] = `
<DocumentFragment>
  <section
    class="pf-v5-l-page-header pf-v5-c-page-header pf-v5-l-page__main-section pf-v5-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-13"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-v5-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-5"
      data-ouia-component-type="PF5/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-v5-c-breadcrumb__list"
        role="list"
      >
        <li
          class="pf-v5-c-breadcrumb__item"
        >
          <a
            data-ouia-component-id="breadcrumb-to-First item"
            data-ouia-component-type="undefined-breadcrumb"
            href="/"
          >
            First item
          </a>
        </li>
        <li
          class="pf-v5-c-breadcrumb__item"
        >
          <span
            class="pf-v5-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          <a
            data-ouia-component-id="breadcrumb-to-Second item"
            data-ouia-component-type="undefined-breadcrumb"
            href="/"
          >
            Second item
          </a>
        </li>
        <li
          class="pf-v5-c-breadcrumb__item"
        >
          <span
            class="pf-v5-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          <a
            data-ouia-component-id="breadcrumb-to-Third item"
            data-ouia-component-type="undefined-breadcrumb"
            href="/"
          >
            Third item
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="pf-v5-l-split pf-m-gutter"
    >
      <div
        class="pf-v5-l-split__item"
      >
        <div
          class="pf-v5-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v5-u-flex-grow-1"
          >
            <h1
              class="pf-v5-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-14"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            />
          </div>
        </div>
      </div>
      <div
        class="pf-v5-l-split__item pf-m-fill"
      />
      <div
        class="pf-v5-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Header component should render with empty breadcrumb 1`] = `
<DocumentFragment>
  <section
    class="pf-v5-l-page-header pf-v5-c-page-header pf-v5-l-page__main-section pf-v5-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-5"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-v5-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-1"
      data-ouia-component-type="PF5/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-v5-c-breadcrumb__list"
        role="list"
      />
    </nav>
    <div
      class="pf-v5-l-split pf-m-gutter"
    >
      <div
        class="pf-v5-l-split__item"
      >
        <div
          class="pf-v5-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v5-u-flex-grow-1"
          >
            <h1
              class="pf-v5-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-6"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            />
          </div>
        </div>
      </div>
      <div
        class="pf-v5-l-split__item pf-m-fill"
      />
      <div
        class="pf-v5-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Header component should render with header Hello world 1`] = `
<DocumentFragment>
  <section
    class="pf-v5-l-page-header pf-v5-c-page-header pf-v5-l-page__main-section pf-v5-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-3"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-v5-l-split pf-m-gutter"
    >
      <div
        class="pf-v5-l-split__item"
      >
        <div
          class="pf-v5-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v5-u-flex-grow-1"
          >
            <h1
              class="pf-v5-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-4"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            >
              Hello world
            </h1>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-l-split__item pf-m-fill"
      />
      <div
        class="pf-v5-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Header component should render with header as empty string 1`] = `
<DocumentFragment>
  <section
    class="pf-v5-l-page-header pf-v5-c-page-header pf-v5-l-page__main-section pf-v5-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-1"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-v5-l-split pf-m-gutter"
    >
      <div
        class="pf-v5-l-split__item"
      >
        <div
          class="pf-v5-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v5-u-flex-grow-1"
          >
            <h1
              class="pf-v5-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-2"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            />
          </div>
        </div>
      </div>
      <div
        class="pf-v5-l-split__item pf-m-fill"
      />
      <div
        class="pf-v5-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Header component should render without to attribute 1`] = `
<DocumentFragment>
  <section
    class="pf-v5-l-page-header pf-v5-c-page-header pf-v5-l-page__main-section pf-v5-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-9"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-v5-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-3"
      data-ouia-component-type="PF5/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-v5-c-breadcrumb__list"
        role="list"
      >
        <li
          class="pf-v5-c-breadcrumb__item"
        >
          First item
        </li>
      </ol>
    </nav>
    <div
      class="pf-v5-l-split pf-m-gutter"
    >
      <div
        class="pf-v5-l-split__item"
      >
        <div
          class="pf-v5-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v5-u-flex-grow-1"
          >
            <h1
              class="pf-v5-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-10"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            />
          </div>
        </div>
      </div>
      <div
        class="pf-v5-l-split__item pf-m-fill"
      />
      <div
        class="pf-v5-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;
